# whipping_star

./: .gitignore  CMakeLists.txt  Notes_12July2023.md  README  setup.sh  source_setupmodule.sh
examples/: CMakeLists.txt  example_1.cxx  example_2.cxx  example_3.cxx  example_4.cxx  example_i.cxx  example_i2.cxx  example_test.cxx  make_friend.c  make_friend_example_macro.c
examples/MiniBooNE_suite/2018_data_release/: macro_convert_to_useful.c  miniboone.xml
hdf5examples/: Containerfile  Dockerfile  runPodman.sh
hdf5examples/Docker/: Dockerfile
hdf5examples/HighFive/: CMakeLists.txt  Dockerfile  tipps
hdf5examples/HighFive/src/: CMakeLists.txt  highfivewrite.cpp
hdf5examples/ProtoType/: CMakeLists.txt  Makefile  build.sh  install_manifest.txt
hdf5examples/ProtoType/HighFive/: CMakeCache.txt  CMakeLists.txt  HighFiveConfig.cmake  HighFiveConfigVersion.cmake  HighFiveTargets.cmake  Makefile  cmake_install.cmake
hdf5examples/ProtoType/HighFive/doc/: Makefile  cmake_install.cmake
hdf5examples/ProtoType/HighFive/include/highfive/: H5Version.hpp
hdf5examples/ProtoType/HighFive/include/highfive/bits/: H5DataType_misc.hpp
hdf5examples/ProtoType/HighFive/src/examples/: Makefile  cmake_install.cmake  create_attribute_string_integer_bin  create_dataset_double_bin  create_datatype_bin  create_extensible_dataset_bin  easy_attribute_bin  easy_dumpoptions_bin  easy_load_dump_bin  read_write_dataset_string_bin  read_write_fixedlen_string_bin  read_write_single_scalar_bin  read_write_vector_dataset_bin  renaming_objects_bin  select_by_id_dataset_cpp11_bin  select_partial_dataset_cpp11_bin
hdf5examples/ProtoType/include/: GenericBlock.hpp  SBNchi.h  SBNconfig.h  SBNcovariance.h  SBNfeld.h  SBNosc.h  SBNspec.h  ngrid.h  prob.h  tools.h
hdf5examples/ProtoType/lbfgsb_cpp/Lbfgsb.3.0/: lbfgsb.f
hdf5examples/ProtoType/lbfgsb_cpp/lib/cmake/lbfgsb_cpp/: lbfgsb_cppConfig-release.cmake  lbfgsb_cppConfig.cmake
hdf5examples/ProtoType/mfa/include/mfa/: block_base.hpp  decode.hpp  encode.hpp  mfa.hpp  mfa_data.hpp
hdf5examples/ProtoType/mfa/tests/: fixed.cpp  integrate.cpp
hdf5examples/ProtoType/src/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SBNchi.cxx  SBNconfig.cxx  SBNcovariance.cxx  SBNfeld.cxx  SBNosc.cxx  SBNspec.cxx  build.sh  cmake_install.cmake  highfivewrite.cpp  nopreosc.cpp  prob.cxx  pureeigen.cpp  pureeigen_moreuniv.cpp  read_matrix.cpp  roottoh5.cpp
hdf5examples/h5cpp/: CMakeLists.txt  Dockerfile
hdf5examples/h5cpp/src/: CMakeLists.txt  h5cppwrite.cpp
hdf5examples/plotting/: DrawContourFiner.py  DrawFCcontour.py  ReadInputFilesAndSaveToPkl.py  makeSpectraMFA.py  plotFraction.py  plotMFAvalid.py  plotUnivHisto.py
inc/: HIVEplot.h  SBNchi.h  SBNcls.h  SBNconditional.h  SBNconfig.h  SBNcovariance.h  SBNfeld.h  SBNgenerate.h  SBNosc.h  SBNspec.h  SBNsvd.h  bayes.h  branch_variable.h  ngrid.h
libio/: CMakeLists.txt  eventweight.cxx  eventweight_LinkDef.h
macros/: hand_make_SBNspec.c  hand_make_matrix.x  make_lee_friend_example_macro.c
src/: CMakeLists.txt  HIVEplot.cxx  SBNchi.cxx  SBNcls.cxx  SBNconditional.cxx  SBNconfig.cxx  SBNcovariance.cxx  SBNfeld.cxx  SBNfeld_Eigen.cxx  SBNfit.cxx  SBNfit3pN.cxx  SBNgenerate.cxx  SBNosc.cxx  SBNprob.cxx  SBNspec.cxx  bayes.cxx  prob.cxx
unit/: CMakeLists.txt  unit1.cxx  unit1a.root  unit1a_matrix.root  unit1b.root  unit1c.root  unit1c_matrix.root  unit2.cxx
unit/compare_SBNcovar/: .gitignore  Makefile  compare_covariance.cxx
unit/compare_SBNspec/: .gitignore  Makefile  compare_cv.cxx
xml/: example.xml  example_4.xml  oscilate_example.xml  sbn.xml  sbn2.xml  sbn_full_gpvms.xml  sbn_full_nevis.xml  sbn_nevis.xml  singlephoton_data.xml  try.xml  uboone_detsys_example.xml  uboone_full.xml
xml/unit/: unit1a.xml  unit1b.xml  unit1c.xml
